add debian fossa support

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,7 @@ galaxy_info:
         - trusty
         - xenial
         - bionic
+        - fossa
     - name: Debian
       versions:
         - jessie
